syntax = "proto3";
package message;



message FalconSearchStoreInfo {
    string StoreName = 1;
    int64 StoreLength = 2;
}

message BinlogMessage {
    int64 LogId = 1;
    int64 LogTimestamp = 2;
    bytes LogDetail = 3;
}


message DictValue {
    uint64 Offset = 1;
    uint64 Length = 2;
}


message DocId {
	 uint32 DocID = 1;
	 uint32 Weight =2;
}


message FieldValue {
    string field = 1;
    bytes value = 2;
}

message Document {
    repeated FieldValue val = 1;
}